Use diff db folder for local and api added ui

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,11 @@ fastapi
 uvicorn[standard]
 langchain
 langchain-community
-chromadb
 openai
-sentence-transformers
 tiktoken
-pydantic
 pydantic-settings
-python-dotenv
 pip-tools
+chromadb==0.5.*
+pydantic>=2
+python-dotenv
+sentence-transformers
